--- a/assignment-ps5.Rmd
+++ b/assignment-ps5.Rmd
@@ -176,28 +176,124 @@ Let’s look at GDP per capita (*GDP_PC*)
 1. (8pt) Make a scatterplot of GDP per capita versus life expectancy by country, using data for 1960. Make the point size dependent on the country size, and color those according to the continent. Feel free to adjust the plot in other ways to make it better. \
 Comment what do you see there. \
 
+```{r}
+gdp_v_le_1960 <- population_data %>% 
+  select(name, region, GDP_PC, lifeExpectancy, time, totalPopulation) %>% 
+  filter(!is.na(name), !is.na(GDP_PC), !is.na(totalPopulation), !name=="", 
+         time %in% c("1960")) %>% 
+  group_by(name, time)
+  ggplot(gdp_v_le_1960, aes(GDP_PC, lifeExpectancy, col=factor(region))) +
+  geom_point(aes(size = totalPopulation/1000000)) +
+  labs(title = "GDP per capita vs Life Expectancy by Country in 1960",
+       x="GDP per capita (USD)",
+       y="Life Expectancy (Years)",
+       col = "Continents",
+       size = "Total Population (Millions)")
+```
+
+
+
 2. (4pt) Make a similar plot, but this time use 2019 data only. \
+
+```{r}
+gdp_v_le_2019 <- population_data %>% 
+  select(name, region, GDP_PC, lifeExpectancy, time, totalPopulation) %>% 
+  filter(!is.na(name), !is.na(GDP_PC), !is.na(totalPopulation), !name=="", 
+         time %in% c("2019")) %>% 
+  group_by(name, time)
+  ggplot(gdp_v_le_2019, aes(GDP_PC, lifeExpectancy, col=factor(region))) +
+  geom_point(aes(size = totalPopulation/1000000)) +
+  labs(title = "GDP per capita vs Life Expectancy by Country in 2019",
+       x="GDP per capita (USD)",
+       y="Life Expectancy (Years)",
+       col = "Continents",
+       size = "Total Population (Millions)")
+```
 
 
 3. (6pt) Compare these two plots and comment what do you see. How has world developed through the last 60 years? \
 
+The life expectancy and country populations have largely increased in general in the last 60 years,. However, the strongest outlier countries with very high GDP per capita have stayed around the same life expectancy even though they have increased in GDP per capita.
+
 4. (6pt) Compute the average life expectancy for each continent in 1960 and 2019. Do the results fit with what do you see on the figures? \
 Note: here as *average*I mean just average over countries, ignore the fact that countries are of different size.\
+
+```{r}
+population_data %>% 
+  select(region, lifeExpectancy, time) %>% 
+  filter(!is.na(region), !region=="", time %in% c("1960", "2016")) %>% 
+  group_by(region, time) %>% 
+  summarise(avg_life_expectancy = mean(lifeExpectancy, na.rm = TRUE)) 
+```
+
+  These results do confirm the results that we found in the graph. Continents with lower CO2 emissions like Africa and Asia in the 1960s experienced very significant life expectancy growth, while nations with already high life expectancy in the 1960s like the Americas and Europe experienced minimal life expectancy growth in 2016.
+
 
 5. (8pt) Compute the average LE growth from 1960-2019 across the continents. Show the results in the order of growth. Explain what do you see. \
 Hint: these data (data in long form) is not the simplest to compute growth. But you may want to check out the lag() function. And do not forget to group data by continent when using lag(), otherwise your results will be messed up! See [**https://faculty.washington.edu/otoomet/info201-book/dplyr.html#dplyr-helpers-compute**](https://faculty.washington.edu/otoomet/info201-book/dplyr.html#dplyr-helpers-compute).\
 
+```{r}
+population_data %>% 
+  select(region, lifeExpectancy, time) %>% 
+  filter(!is.na(region), !region=="", time %in% c("1960", "2016")) %>% 
+  group_by(region, time) %>% 
+  mutate(Growth = (lifeExpectancy - lag(lifeExpectancy))*100/lag(lifeExpectancy)) %>% 
+  summarise(avg_growth = mean(Growth, na.rm = TRUE))
+```
+
+  This data shows that growth rates in regions with lower CO2 levels did experience faster life expectancy growth rates. However, in the 1960s it also states that the Americas also experienced a significant life expectancy growth. This can be interpreted as the large industrialization of Canada and the growth of Mexico. Now, all continents with the exception of Africa are experiencing stagnating life expectancies, a sign that perhaps the maximum life span of humanity has been reached with current science.
+
 6. (6pt) Show the histogram of GDP per capita for years of 1960 and 2019. Try to put both histograms on the same graph, see how well you can do it! \
+
+```{r}
+combo <- rbind(gdp_v_le_1960, gdp_v_le_2019)
+ggplot(combo, aes(GDP_PC, lifeExpectancy, col=factor(time))) +
+  geom_point() +
+  labs(title = "GDP per capita vs Life Expectancy by Country in 1960 and 2016",
+       x="GDP per capita (USD)",
+       y="Life Expectancy (Years)",
+       col = "Year")
+```
+
 
 7. (6pt) What was the ranking of US in terms of life expectancy in 1960 and in 2019? (When counting from top.) \
 Hint: check out the function rank()! \
 Hint2: 17 for 1960. \
 
+```{r}
+population_data %>% 
+  select(name, lifeExpectancy, time) %>% 
+  filter(!is.na(lifeExpectancy), !is.na(name), !name=="", time %in% c("1960", "2019")) %>% 
+  arrange(time, desc(lifeExpectancy)) %>% 
+  group_by(time) %>% 
+  mutate(rankings = rank(desc(lifeExpectancy))) %>% 
+  filter(name == "United States of America")
+```
+
+
 8. (6pt) If you did this correctly, then you noticed that US ranking has been falling quite a bit. But we also have more countries in 2019–what about the relative rank divided by the corresponding number of countries that have LE data in the corresponding year? \
 Hint: 0.0904 for 1960. \
+
+```{r}
+population_data %>% 
+  select(name, lifeExpectancy, time) %>% 
+  filter(!is.na(lifeExpectancy), !is.na(name), !name=="", time %in% c("1960", "2019")) %>% 
+  arrange(time, desc(lifeExpectancy)) %>% 
+  group_by(time) %>% 
+  mutate(rankings = rank(desc(lifeExpectancy))) %>% 
+  select(name, time, rankings) %>% 
+  group_by(time) %>% 
+  mutate(total = max(rankings)) %>% 
+  filter(name == "United States of America") %>% 
+  summarise(relative_rank = rankings/total)
+```
+
+
 
 ---------------------------------------------------------------------
 
 Finally tell us how many hours did you spend on this PS.
 
+This assignment was a lot more work than the previous Problem Sets. This PS5 probably took me close to around 8 hours throughout the week.
 
+GITHUB REPO: https://github.com/DLJ949/ps5-gapminder/tree/main 
